WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
317001
Web Inspector: `Network.setExtraHTTPHeaders` does not affect `WebSocket`
https://bugs.webkit.org/show_bug.cgi?id=317001
Summary
Web Inspector: `Network.setExtraHTTPHeaders` does not affect `WebSocket`
Devin Rousso
Reported
2026-06-12 11:31:06 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2026-06-12 14:40:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/67097
EWS
Comment 2
2026-06-18 07:28:07 PDT
Committed
315465@main
(1e9d5a1b0650): <
https://commits.webkit.org/315465@main
> Reviewed commits have been landed. Closing PR #67097 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-06-18 07:29:11 PDT
<
rdar://problem/180033420
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug